[project]
name = "yampit"
version = "0.3.0"
description = "Builds datasets, jumps through FDBs."
readme = "README.md"
authors = [
    { name = "Tobias Kölling", email = "tobias.koelling@mpimet.mpg.de" },
    { name = "Lukas Kluft", email = "lukas.kluft@mpimet.mpg.de" },
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.1",
    "eccodes>=2.38.3",
    "fsspec>=2025.2.0",
    "jinja2>=3.1.5",
    "polytope-client>=0.7.4",
    "sanic>=24.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "healpy>=1.18.0",
    "ipython>=8.29.0",
    "matplotlib>=3.9.2",
    "xarray>=2024.10.0",
    "zarr>=2.18.3",
]
